Changes by charl